<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorHangmanMainBackground"
    tools:context=".Hangman.HangmanGameActivity">

    <TextView
        android:id="@+id/txtHangman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hangman_app_name"
        android:textColor="@color/colorHangmanAccent"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999" />

    <ImageView
        android:id="@+id/hangmanImage"
        android:layout_width="205dp"
        android:layout_height="254dp"
        android:contentDescription="Hangman Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMaskedWord"
        app:srcCompat="@drawable/start" />

    <TextView
        android:id="@+id/txtMaskedWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/hangman_round_background"
        android:paddingVertical="8dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/secret_word"
        android:textColor="@color/hangman_white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topDivider"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/edtLetterGuess"
        android:layout_width="160sp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="8"
        android:hint="@string/guess_a_letter"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toEndOf="@+id/hangmanImage"
        app:layout_constraintTop_toBottomOf="@+id/txtMaskedWord"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/btnGuess"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorHangmanAccent"
        android:text="@string/click"
        android:textColor="@color/hangman_white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hangmanImage"
        app:layout_constraintTop_toBottomOf="@+id/edtLetterGuess" />

    <Button
        android:id="@+id/btnGuessWord"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorHangmanAccent"
        android:text="Guess The word!"
        android:textColor="@color/hangman_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hangmanImage"
        app:layout_constraintTop_toBottomOf="@+id/btnGuess" />

    <TextView
        android:id="@+id/txtLettersUsedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/hangman_round_background"
        android:paddingVertical="8dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/letters_used"
        android:textColor="@color/hangman_white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomDivider" />

    <View
        android:id="@+id/topDivider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorHangmanAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHangman" />

    <View
        android:id="@+id/bottomDivider"
        android:layout_width="405dp"
        android:layout_height="4dp"
        android:background="@color/colorHangmanAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMaskedWord"
        app:layout_constraintVertical_bias="0.62" />

    <TextView
        android:id="@+id/txtScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/colorHangmanAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hangmanImage"
        app:layout_constraintVertical_bias="0.07999998" />

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_120"
        android:textColor="@color/colorHangmanAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/txtScoreText"
        app:layout_constraintTop_toBottomOf="@+id/hangmanImage"
        app:layout_constraintVertical_bias="0.110000014" />

    <TextView
        android:id="@+id/txtLettersGuessed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/none"
        android:textColor="#525252"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLettersUsedText" />

    <TextView
        android:id="@+id/txtStage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stage"
        android:textColor="#525252"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/txtMaskedWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topDivider" />

    <TextView
        android:id="@+id/txtStageNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textColor="#525252"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/txtMaskedWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/txtStage"
        app:layout_constraintTop_toBottomOf="@+id/topDivider" />

<!--    <ImageView-->
<!--        android:id="@+id/heart"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:src="@drawable/heart"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/txtMaskedWord"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.92"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/topDivider"-->
<!--        app:layout_constraintVertical_bias="0.63" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView4"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:src="@drawable/heart"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/txtMaskedWord"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/heart"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/topDivider" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView5"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:src="@drawable/heart"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/txtMaskedWord"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/imageView4"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/topDivider" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView6"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:src="@drawable/heart"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/txtMaskedWord"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/imageView5"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/topDivider" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView7"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:src="@drawable/heart"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/txtMaskedWord"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/imageView8"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/topDivider" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView8"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:src="@drawable/heart"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/txtMaskedWord"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/imageView6"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/topDivider" />-->

</androidx.constraintlayout.widget.ConstraintLayout>