<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hangman.HangmanStageEnded"
    android:background="@drawable/hangman_game_ends">

<!--    <TextView-->
<!--        android:id="@+id/txtHangman"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/hangman_app_name"-->
<!--        android:textColor="@color/colorHangmanAccent"-->
<!--        android:textSize="40sp"-->
<!--        android:textStyle="bold|italic"-->
<!--        tools:layout_editor_absoluteX="50dp"-->
<!--        tools:layout_editor_absoluteY="16dp" />-->

<!--    <View-->
<!--        android:id="@+id/topDivider"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="10dp"-->
<!--        android:background="@color/colorHangmanAccent"-->
<!--        tools:layout_editor_absoluteX="0dp"-->
<!--        tools:layout_editor_absoluteY="94dp" />-->

    <View
        android:id="@+id/bottomDivider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorHangmanAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/hangman_round_background"
        android:text="@string/play_again"
        android:textColor="@color/hangman_white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <Button
        android:id="@+id/btnNextStage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/hangman_round_background"
        android:text="go to next stage"
        android:textColor="@color/hangman_white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottomDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <Button
        android:id="@+id/btnMainMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/hangman_round_background"
        android:text="@string/main_menu"
        android:textColor="@color/hangman_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlayAgain" />

    <Button
        android:id="@+id/btnBackToHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/hangman_round_background"
        android:text="@string/hangman_back_to_home"
        android:textColor="@color/hangman_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMainMenu" />

    <TextView
        android:id="@+id/txtFirstMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Message"
        android:textAlignment="center"
        android:textColor="@color/colorHangmanAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/txtValueMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Value Message"
        android:textAlignment="center"
        android:textColor="#525252"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstMessage" />

    <Button
        android:id="@+id/btnBonusLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/bonus_stage"
        android:drawableLeft="@drawable/bonus_gold"
        android:drawableRight="@drawable/bonus_gold"

        android:padding="15dp"
        android:text=" !!! BONUS SCORE !!! "

        android:textColor="@color/yellow"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>